# evallm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.yaml  pyproject.toml
examples/sentiment/: README.md  evallm.yaml
examples/sentiment/suites/: basic.jsonl  edge.jsonl  sarcasm.jsonl
src/evallm/: __init__.py  cli.py  config.py  evaluators.py  metrics.py  models.py  providers.py  reporting.py  runner.py  storage.py
src/evallm/reports/: html.py
src/evallm/reports/templates/: report.html.j2
tests/: test_config.py  test_evaluators.py  test_models.py  test_runner.py  test_storage.py
