[project]
name = "evallm"
version = "0.1.0"
description = "LLM evaluation framework for developers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "szelaag", email = "business.szelag@email.com"}
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evallm"]