[project]
name = "evallm"
version = "0.1.0"
description = "LLM evaluation framework for developers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "szelaag", email = "business.szelag@email.com"}
]
dependencies = [
    "anthropic>=0.117.0",
    "click>=8.4.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evallm"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[project.scripts]
evallm = "evallm.cli:cli"

[tool.pytest.ini_options]
python_classes = []
