[project]
name = "evallm-cli"
description = "LLM evaluation framework for developers"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dynamic = ["version"]
keywords = ["llm", "evaluation", "testing", "ai", "anthropic", "claude"]
authors = [
    {name = "szelaag", email = "business.szelag@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.117.0",
    "click>=8.4.2",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[project.scripts]
evallm = "evallm.cli:cli"

[project.urls]
Homepage = "https://github.com/szelaag/evallm"
Repository = "https://github.com/szelaag/evallm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/evallm/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/evallm"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
python_classes = []